--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PermissaoActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -41,6 +41,10 @@
         </activity>
         <activity
             android:name=".Detalhe_Ocorrencia_Activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".SobreActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
