--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,6 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
-    dexOptions {
-        javaMaxHeapSize "4g"
-        preDexLibraries = false
-    }
     defaultConfig {
         applicationId "com.example.savio.focoaedes"
         minSdkVersion 15
@@ -14,7 +10,6 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -39,11 +34,13 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-maps:10.2.6'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.google.android.gms:play-services:10.2.6'
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
+
+    compile 'com.google.android.gms:play-services-location:11.0.0'
+    compile 'com.google.android.gms:play-services-maps:11.0.0'
+
     testCompile 'junit:junit:4.12'
 }
